@@ -67,6 +67,7 @@ will not be print anymore on standard output when --report-file option used
 summary, extensions, interfaces, traits, classes, functions, constants, globals, tokens, conditions)
 - fixed Reference interface about new filter API
 - WARNING: PHP_Timer 1.0.4 break PHP 5.2 compatibility, so the print resource feature become optional
+- improved true results again with detection of conditional code and excludes from parsing
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
